manifests/privatebin/privatebin/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: privatebin
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: privatebin
  namespace: privatebin
  labels:
    app: privatebin
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: privatebin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 82
        fsGroup: 82
      containers:
      - image: privatebin/nginx-fpm-alpine:stable
        name: privatebin
        volumeMounts:
        # - name: config
        #   mountPath: /srv/cfg/conf.php
        #   subPath: conf.php
        - name: data
          mountPath: /srv/data
        ports:
        - containerPort: 8080
        securityContext:
          capabilities:
            drop: [ALL]
          readOnlyRootFilesystem: true
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 1
            memory: 256Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 50m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
      # - name: config
      #   persistentVolumeClaim:
      #     claimName: privatebin-config
      #     readOnly: false
      - name: data
        persistentVolumeClaim:
          claimName: privatebin-data
          readOnly: false
# ---
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: privatebin-config
# spec:
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 2Gi
#   storageClassName: longhorn
#   volumeMode: Filesystem
