manifests/privatebin/privatebin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: privatebin
  namespace: privatebin
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "paste.batlab.io"
  rules:
    - backendRefs:
        - name: privatebin-service
          port: 8080
